tests/invalid/classes/06_new_wrong_arity.cps
class A { function constructor(x: integer) { } }
let a: A = new A();      // faltan args E021
